Complete 4th dec puzzle.